--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title></title>
     
     <meta name="description" content="" />
-    <meta name="author" content="Yann Aguettaz" />
+    <meta name="author" content="" />
 
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:regular,semibold,italic,italicsemibold|PT+Sans:400,700,400italic,700italic|PT+Serif:400,700,400italic,700italic" rel="stylesheet" />
 
